# data-project-structure

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/etl/: extract.py  load.py  pipeline.py  transform.py
docs/: index.md
tests/: __init__.py  test_unitarios.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_extract.py  test_load.py  test_transform.py
