[tool.poetry]
name = "estrutura"
version = "0.1.0"
description = ""
authors = [" CiceroGB <brunelli.cg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
faker = "^24.4.0"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
