[tool.poetry]
name = "estrutura"
version = "0.1.0"
description = ""
authors = [" CiceroGB <brunelli.cg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
faker = "^24.4.0"
isort = "^5.13.2"
pip-audit = "^2.7.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.9.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.15"
pymdown-extensions = "^10.7.1"
pre-commit = "^3.7.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


